fix iOS font resizing; removed hn/twitter sharing; fixed codeblocks spacing for mobile; fixed mobile codeblock monospace font

--- a/sass/base/_layout.scss
+++ b/sass/base/_layout.scss
@@ -11,6 +11,7 @@ body{
 	background: $color-background;
 	color: $color-gray01;
   margin: 0 20px;
+  -webkit-text-size-adjust: 100%;
 	@media screen and (max-width: 600px){
 		font-size: 13px;
 	}
